--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "trabalhopratico",
+  "name": "codigo_raspeberry",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server_sensores.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "firebase-admin": "^11.8.0",
-    "hbs": "^4.2.0",
-    "nodemon": "^2.0.22",
-    "sweetalert2": "^11.7.5"
+    "firebase-admin": "^11.8.0"
   }
 }
